--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 body{
    background-color:rgb(2, 2, 34);
    color:white;
-   font-family: "Lucida Console", "Courier New" monospace;
+   /* font-family: "Lucida Console", "Courier New" monospace; */
    
 
 }
@@ -52,7 +52,7 @@ body{
    font-weight: 800;
 }
 .iam{
-   font-family: fantasy;
+   /* font-family: fantasy; */
 }
 .fronte{
    color:rgb(189, 104, 118);
